Create dev branch; modify XlateMarkup to use .its file; add .its file for DocBook; add Markup test

--- a/tests/Label_Test.docbook
+++ b/tests/Label_Test.docbook
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-stylesheet href="http://www.jabadaw.com/PAC/files/Docbook.css" type="text/css"?>
 <article xmlns="http://docbook.org/ns/docbook"
-         xmlns:dita="http://dita.oasis-open.org/architecture/2005"
-         xmlns:xi="http://www.w3.org/2001/XInclude"
          xmlns:xl="http://www.w3.org/1999/xlink"
+         xmlns:xi="http://www.w3.org/2001/XInclude"
          xmlns:its="http://www.w3.org/2005/11/its"
-         xmlns:tei="http://www.tei-c.org/ns/1.0"
          xmlns:xlf="urn:oasis:names:tc:xliff:document:1.2"
+         xmlns:dita="http://dita.oasis-open.org/architecture/2005"
+         xmlns:tei="http://www.tei-c.org/ns/1.0"
          version="5.0-variant PACBook"
          xml:lang="en-GB"
-         xml:id="fpp_usage">
-	<title>Test</title>
+         xml:id="label_test">
+	<title>Label Test</title>
+	<warning>
+		<title its:translate="no"/>
+		<para>This should have an English title!</para>
+	</warning>
+	<simplesect xml:lang="mul">
+		<title>Multiple Languages</title>
+		<important>
+			<title its:translate="no"/>
+			<para>The quick brown fox jumps over the <simplelist type="inline" role="and"><member>mouse</member><member>dog</member><member>cat</member></simplelist>.</para>
+		</important>
+	</simplesect>
 	<simplesect xml:lang="es">
 		<title>Español</title>
 		<para><simplelist type="inline" role="and"><member>Mallorca</member><member>Menorca</member><member><phrase tei:pron="I">Ibiza</phrase></member></simplelist>.</para>
