--- a/tests/Markup_Test.docbook
+++ b/tests/Markup_Test.docbook
@@ -7,13 +7,13 @@
          xmlns:xl="http://www.w3.org/1999/xlink"
          xmlns:xi="http://www.w3.org/2001/XInclude"
          xmlns:its="http://www.w3.org/2005/11/its"
-         xmlns:dita="http://dita.oasis-open.org/architecture/2005"
+         xmlns:content="http://stanleysecurity.github.io/PACBook/ns/transclusion"
          xmlns:xlf="urn:oasis:names:tc:xliff:document:1.2"
          version="5.0-variant PACBook"
          xml:lang="en-GB"
          xml:id="fev"
          status="draft">
-	<title><phrase dita:conref="FPP"/> Database Viewer</title>
+	<title><phrase content:ref="FPP"/> Database Viewer</title>
 	<subtitle its:translate="no">User Guide</subtitle>
 	<info>
 		<rdf:RDF>
@@ -30,7 +30,7 @@
 			</rdf:Description>
 			<rdf:Description dc:type="applicability">
 				<dcterms:references rdf:parseType="Resource">
-					<dc:subject rdf:parseType="Literal"><phrase dita:conref="FPP"/></dc:subject>
+					<dc:subject rdf:parseType="Literal"><phrase content:ref="FPP"/></dc:subject>
 					<dc:description>Access Controller</dc:description>
 				</dcterms:references>
 				<dcterms:references rdf:parseType="Resource">
@@ -41,11 +41,11 @@
 		</rdf:RDF>
 		<copyright>
 			<year><?dbtimestamp format="Y"?></year>
-			<holder><phrase dita:conref="Full_Company"/></holder>
+			<holder><phrase content:ref="Full_Company"/></holder>
 		</copyright>
 		<authorgroup>
 			<author>
-				<orgname><phrase dita:conref="Full_Company"/></orgname>
+				<orgname><phrase content:ref="Full_Company"/></orgname>
 			</author>
 			<author>
 				<personname>
@@ -54,7 +54,7 @@
 				</personname>
 			</author>
 		</authorgroup>
-		<biblioid class="pubsnumber"><phrase dita:conref="TB"/>268</biblioid>
+		<biblioid class="pubsnumber"><phrase content:ref="TB"/>268</biblioid>
 		<edition>1.0</edition>
 		<releaseinfo><xi:include href="build.number" parse="text"/></releaseinfo>
 		<date><?dbtimestamp format="b Y"?></date>
@@ -64,7 +64,7 @@
 		</extendedlink>
 		<abstract>
 			<title>Subject</title>
-			<para>This document describes how to install and use the <phrase dita:conref="FPP"/> database viewer.</para>
+			<para>This document describes how to install and use the <phrase content:ref="FPP"/> database viewer.</para>
 		</abstract>
 		<abstract>
 			<title>Products</title>
@@ -73,7 +73,7 @@
 	</info>
 	<section xml:id="fev_intro">
 		<title>Introduction</title>
-		<para>The <phrase dita:conref="FPP"/> database viewer enables you to view a database exported from the <phrase dita:conref="FPP"/> access controller.</para>
+		<para>The <phrase content:ref="FPP"/> database viewer enables you to view a database exported from the <phrase content:ref="FPP"/> access controller.</para>
 		<mediaobject>
 			<imageobject>
 				<imagedata fileref="images/win_fev.png" format="PNG" depth="8.12cm" width="11.57cm" scalefit="1"/>
@@ -86,7 +86,7 @@
 			<?pac-keep-together always?>
 			<title>To install the database viewer:</title>
 			<step>
-				<para>Insert the <phrase dita:conref="FPP"/> USB drive into the PC.</para>
+				<para>Insert the <phrase content:ref="FPP"/> USB drive into the PC.</para>
 			</step>
 			<step>
 				<para>The installation process should start automatically. If it doesn’t, open the USB drive in Windows Explorer and double-click on the <filename>Setup.exe</filename> file.</para>
@@ -100,28 +100,28 @@
 		<title>Start the Database Viewer</title>
 		<procedure>
 			<?pac-keep-together always?>
-			<title>To start the <phrase dita:conref="FPP"/> database viewer:</title>
+			<title>To start the <phrase content:ref="FPP"/> database viewer:</title>
 			<step>
 				<stepalternatives>
 					<step>
-						<para>In the <guimenu>Start</guimenu> menu, choose the <guimenuitem><phrase dita:conref="FPP"/> Database Viewer</guimenuitem> command, or:</para>
+						<para>In the <guimenu>Start</guimenu> menu, choose the <guimenuitem><phrase content:ref="FPP"/> Database Viewer</guimenuitem> command, or:</para>
 					</step>
 					<step>
-						<para>Double-click on the <guiicon><phrase dita:conref="FPP"/> Database Viewer</guiicon> icon on the Windows desktop, or:</para>
+						<para>Double-click on the <guiicon><phrase content:ref="FPP"/> Database Viewer</guiicon> icon on the Windows desktop, or:</para>
 					</step>
 					<step>
 						<para>Double-click on an <filename class="extension">FEV</filename> file.</para>
 					</step>
 				</stepalternatives>
-				<para>The <phrase dita:conref="FPP"/> database viewer starts and the <guilabel role="wintitle">Open</guilabel> dialog box is displayed so that you can open an <filename class="extension">FEV</filename> file. See <xref xl:href="#fev_files" xrefstyle="select: title"/>.</para>
+				<para>The <phrase content:ref="FPP"/> database viewer starts and the <guilabel role="wintitle">Open</guilabel> dialog box is displayed so that you can open an <filename class="extension">FEV</filename> file. See <xref xl:href="#fev_files" xrefstyle="select: title"/>.</para>
 			</step>
 		</procedure>
 		<procedure>
 			<?pac-keep-together always?>
-			<title>To start the <phrase dita:conref="FPP"/> database viewer and open a file:</title>
+			<title>To start the <phrase content:ref="FPP"/> database viewer and open a file:</title>
 			<step>
 				<para>Double-click on an <filename class="extension">FEV</filename> file.</para>
-				<para>The <phrase dita:conref="FPP"/> database viewer starts and the selected file is opened.</para>
+				<para>The <phrase content:ref="FPP"/> database viewer starts and the selected file is opened.</para>
 			</step>
 		</procedure>
 	</section>
@@ -191,13 +191,13 @@
 	</section>
 	<section xml:id="fev_ctrl">
 		<title>Controller Details</title>
-		<para>The <guilabel>212 controller details</guilabel> section shows information about the <phrase dita:conref="FPP"/> that generated this file.</para>
+		<para>The <guilabel>212 controller details</guilabel> section shows information about the <phrase content:ref="FPP"/> that generated this file.</para>
 		<variablelist>
 			<?pac-keep-together always?>
 			<varlistentry>
 				<term><guilabel>Serial number</guilabel></term>
 				<listitem>
-					<para>The serial number of the <phrase dita:conref="FPP"/>.</para>
+					<para>The serial number of the <phrase content:ref="FPP"/>.</para>
 				</listitem>
 			</varlistentry>
 			<varlistentry>
@@ -215,13 +215,13 @@
 			<varlistentry>
 				<term><guilabel>Is a master</guilabel></term>
 				<listitem>
-					<para>Whether the <phrase dita:conref="FPP"/> that generated this file is configured as a master controller.</para>
+					<para>Whether the <phrase content:ref="FPP"/> that generated this file is configured as a master controller.</para>
 				</listitem>
 			</varlistentry>
 			<varlistentry>
 				<term><guilabel>Uses HF tokens</guilabel></term>
 				<listitem>
-					<para>Whether the <phrase dita:conref="FPP"/> that generated this file uses HF tokens. See <xref xl:href="#fev_config" xrefstyle="select: title"/>.</para>
+					<para>Whether the <phrase content:ref="FPP"/> that generated this file uses HF tokens. See <xref xl:href="#fev_config" xrefstyle="select: title"/>.</para>
 				</listitem>
 			</varlistentry>
 		</variablelist>
@@ -506,7 +506,7 @@
 			<varlistentry>
 				<term><guilabel>Token type</guilabel></term>
 				<listitem>
-					<para>The type of tokens which this <phrase dita:conref="FPP"/> uses: <option>LF tokens</option> or <option>HF tokens</option>. See <xref xl:href="#fev_ctrl" xrefstyle="select: title"/>.</para>
+					<para>The type of tokens which this <phrase content:ref="FPP"/> uses: <option>LF tokens</option> or <option>HF tokens</option>. See <xref xl:href="#fev_ctrl" xrefstyle="select: title"/>.</para>
 				</listitem>
 			</varlistentry>
 			<varlistentry>
@@ -910,7 +910,7 @@
 		<title>Exit the Database Viewer</title>
 		<procedure>
 			<?pac-keep-together always?>
-			<title>To close the <phrase dita:conref="FPP"/> database viewer:</title>
+			<title>To close the <phrase content:ref="FPP"/> database viewer:</title>
 			<step>
 				<para>Choose the <menuchoice><guimenu>File</guimenu><guimenuitem>Exit</guimenuitem></menuchoice> command.</para>
 			</step>
